from src.services.agents.agent_interface import IAgent


class Agent(IAgent):
    pass