from src.services.llm_rag.llm_rag_interface import ILlmRag


class LlmRag(ILlmRag):
    pass